manifests/glance/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: glance
  name: glance
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: glance
  name: glance
  namespace: glance
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  selector:
    app: glance
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: glance
  name: glance
  namespace: glance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      containers:
      - env:
        - name: TZ
          value: Europe/Berlin
        image: glanceapp/glance:v0.8.6@sha256:9dfb09470b207dcb67ac715994bdb1929374ba3f9c0d7df7462c24adf10fd073
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/healthz
            port: http
          periodSeconds: 30
        name: glance
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/healthz
            port: http
          periodSeconds: 10
        resources:
          limits:
            memory: 256Mi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /app/config
          name: config
          readOnly: true
        - mountPath: /tmp
          name: tmp
      securityContext:
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - configMap:
          name: glance-config-tfd95gcf85
        name: config
      - emptyDir: {}
        name: tmp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: local-ca-issuer
    kube-vip.io/loadbalancerIPs: 192.168.14.14
  labels:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: glance
  name: glance
  namespace: glance
spec:
  ingressClassName: cilium
  rules:
  - host: glance.nekropolis.irminsul
    http:
      paths:
      - backend:
          service:
            name: glance
            port:
              number: 8080
        path: /
        pathType: Prefix
  - host: glance.irminsul
    http:
      paths:
      - backend:
          service:
            name: glance
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - glance.irminsul
    - glance.nekropolis.irminsul
    secretName: glance-certificate
